--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.12",
+    "exifr": "^7.1.3",
     "framer-motion": "^12.23.12",
+    "heic2any": "^0.0.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
