style: prettier-plugin-tailwindcss

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,6 @@
   "jsxSingleQuote": false,
   "bracketSameLine": false,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
