--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "globals": "^16.3.0",
     "playwright": "^1.54.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.1.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
